[package]
name = "darwin-code-sandboxing"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "darwin_code_sandboxing"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
darwin-code-protocol = { workspace = true }
darwin-code-utils-absolute-path = { workspace = true }
dunce = { workspace = true }
libc = { workspace = true }
serde_json = { workspace = true }
regex-lite = { workspace = true }
tracing = { workspace = true, features = ["log"] }
url = { workspace = true }
which = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
