[package]
name = "darwin-code-secrets"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
age = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
darwin-code-git-utils = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
