[package]
edition.workspace = true
license.workspace = true
name = "darwin-code-skills"
version.workspace = true
build = "build.rs"

[lib]
doctest = false
name = "darwin_code_skills"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
codex-utils-absolute-path = { workspace = true }
include_dir = { workspace = true }
thiserror = { workspace = true }
