[package]
edition.workspace = true
license.workspace = true
name = "darwin-code-tools"
version.workspace = true

[lints]
workspace = true

[dependencies]
darwin-code-app-server-protocol = { workspace = true }
darwin-code-code-mode = { workspace = true }
darwin-code-features = { workspace = true }
darwin-code-protocol = { workspace = true }
darwin-code-utils-absolute-path = { workspace = true }
darwin-code-utils-pty = { workspace = true }
rmcp = { workspace = true, default-features = false, features = [
    "base64",
    "macros",
    "schemars",
    "server",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
