load("//:defs.bzl", "darwin_code_rust_crate")

darwin_code_rust_crate(
    name = "app-server",
    crate_name = "darwin_code_app_server",
    integration_test_timeout = "long",
    test_shard_counts = {
        "app-server-all-test": 8,
        "app-server-unit-tests": 8,
    },
    test_tags = ["no-sandbox"],
)
