[package]
name = "darwin-code-arg0"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "darwin_code_arg0"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
darwin-code-apply-patch = { workspace = true }
darwin-code-exec-server = { workspace = true }
darwin-code-linux-sandbox = { workspace = true }
darwin-code-sandboxing = { workspace = true }
darwin-code-shell-escalation = { workspace = true }
darwin-code-utils-absolute-path = { workspace = true }
darwin-code-utils-home-dir = { workspace = true }
dotenvy = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
