[package]
edition.workspace = true
license.workspace = true
name = "darwin-code-code-mode"
version.workspace = true

[lib]
doctest = false
name = "darwin_code_code_mode"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-channel = { workspace = true }
async-trait = { workspace = true }
darwin-code-protocol = { workspace = true }
deno_core_icudata = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
v8 = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
