load("//:defs.bzl", "darwin_code_rust_crate")

darwin_code_rust_crate(
    name = "collaboration-mode-templates",
    crate_name = "darwin_code_collaboration_mode_templates",
    compile_data = glob(["templates/*.md"]),
)

exports_files(
    glob(["templates/*.md"]),
    visibility = ["//visibility:public"],
)
