load("//:defs.bzl", "darwin_code_rust_crate")

darwin_code_rust_crate(
    name = "core-skills",
    crate_name = "darwin_code_core_skills",
    compile_data = glob(
        include = ["**"],
        exclude = [
            "**/* *",
            "BUILD.bazel",
            "Cargo.toml",
        ],
        allow_empty = True,
    ),
)
